<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_pink"
    android:padding="@dimen/margin_medium">

    <ImageView
        android:id="@+id/ivArticleImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_height_article"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivArticleImage" />

    <TextView
        android:id="@+id/tvNewsSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/clawdeen"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tvNewsSite"
        app:layout_constraintTop_toTopOf="@id/tvNewsSite" />

    <TextView
        android:id="@+id/tvSummaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/article_summary"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/clawdeen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/text_size_large"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvSummaryLabel"
        app:layout_constraintTop_toBottomOf="@id/tvSummaryLabel" />

    <TextView
        android:id="@+id/tvSourceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/article_source"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:textColor="@color/clawdeen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSummary" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/baby_blue"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvSourceLabel"
        app:layout_constraintTop_toBottomOf="@id/tvSourceLabel" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnToggleFavorite"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/btn_add_favorite"
        android:contentDescription="@string/content_description_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSource" />

    <Button
        android:id="@+id/btnBack"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSource" />

</androidx.constraintlayout.widget.ConstraintLayout>
